@@ -4,10 +4,11 @@
 
 void CK2Character::init(Object* obj, map<int, CK2Dynasty*>& dynasties)
 {
-	name		= obj->getLeaf("birth_name");
-	religion	= obj->getLeaf("religion");
-	culture	= obj->getLeaf("culture");
-	dynasty	= dynasties[ atoi( obj->getLeaf("dynasty").c_str() ) ];
+	name			= obj->getLeaf("birth_name");
+	religion		= obj->getLeaf("religion");
+	culture		= obj->getLeaf("culture");
+	dynasty		= dynasties[ atoi( obj->getLeaf("dynasty").c_str() ) ];
+	birthDate	= obj->getLeaf("birth_date");
 }
 
 
@@ -20,4 +21,10 @@ string CK2Character::getName()
 CK2Dynasty* CK2Character::getDynasty()
 {
 	return dynasty;
+}
+
+
+date CK2Character::getBirthDate()
+{
+	return birthDate;
 }
