@@ -6,6 +6,7 @@
 #include <string>
 #include <vector>
 #include "EU3Ruler.h"
+#include "EU3History.h"
 #include "..\CK2World\CK2Title.h"
 #include "..\Date.h"
 using namespace std;
@@ -19,10 +20,11 @@ class EU3Country
 		void		convert(CK2Title*);
 		string	getTag();
 	private:
-		string		tag;
-		string		historyFile;
-		string		government;
-		EU3Ruler*	monarch;
+		string					tag;
+		string					historyFile;
+		string					government;
+		EU3Ruler*				monarch;
+		vector<EU3History*>	history;
 };
 
 
