@@ -4,6 +4,8 @@
 
 #include <string>
 #include "..\Parsers\Object.h"
+#include "..\Date.h"
+#include "..\CK2World\CK2Character.h"
 using namespace std;
 
 
@@ -11,8 +13,9 @@ class EU3Ruler
 {
 	public:
 		EU3Ruler(string name, int dip, int adm, int mil, string dynasty);
+		EU3Ruler(CK2Character*);
 		EU3Ruler(Object*);
-		void output(FILE*);
+		void	output(FILE*);
 		int	getID();
 	private:
 		string	name;
@@ -21,6 +24,7 @@ class EU3Ruler
 		int		military;
 		int		id;
 		string	dynasty;
+		date		birthDate;
 };
 
 
